--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "homepage": "https://github.com/giftdibs/product-page-scraper#readme",
   "devDependencies": {
-    "eslint": "5.7.0",
+    "eslint": "5.15.1",
     "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-node": "8.0.1",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/giftdibs/product-page-scraper.git"
   }
 }
